typescript/checker/tests/conformance/externalModules/exportAssignmentConstrainedGenericType.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            217,
        ),
        hi: BytePos(
            220,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/externalModules/exportAssignmentConstrainedGenericType.ts:12:13
   |
12 | var x = new foo(true); // Should error
   |             ^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            257,
        ),
        hi: BytePos(
            260,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/externalModules/exportAssignmentConstrainedGenericType.ts:13:13
   |
13 | var y = new foo({a: "test", b: 42}); // Should be OK
   |             ^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            315,
        ),
        hi: BytePos(
            316,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/externalModules/exportAssignmentConstrainedGenericType.ts:14:17
   |
14 | var z: number = y.test.b;
   |                 ^

